--- a/home.html
+++ b/home.html
@@ -17,7 +17,11 @@
    <link rel="icon" href="./img/innovistalogo.jpg">
    <style>
       @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;600&display=swap');
+*{
+   selection:none;
+}
 
+      
 body{
   background-color: #1a1a1a;
 }
