--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
    <style>
       @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;600&display=swap');
 *{
-   selection:none;
+   user-select: none;
 }
 
       
