--- a/home.html
+++ b/home.html
@@ -24,7 +24,14 @@
       
 body{
   background-color: #1a1a1a;
-   user-select: none;
+   
+   -webkit-user-select: none;
+    /* Safari/Chrome */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
 }
       section {
           width: 100%;
